--- a/Pinball/SDL Game.vcxproj
+++ b/Pinball/SDL Game.vcxproj
@@ -75,7 +75,7 @@
     <ClInclude Include="ModulePhysics.h" />
     <ClInclude Include="p2List.h" />
     <ClInclude Include="Module.h" />
-    <ClInclude Include="ModuleAudio.h" />
+    <ClInclude Include="Audio.h" />
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="ModulePlayer.h" />
     <ClInclude Include="ModuleRender.h" />
