--- a/Pinball/SDL Game.vcxproj.filters
+++ b/Pinball/SDL Game.vcxproj.filters
@@ -41,9 +41,6 @@
     <ClInclude Include="ModulePlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleAudio.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="p2List.h">
       <Filter>Header Files\Containers</Filter>
     </ClInclude>
@@ -57,6 +54,9 @@
       <Filter>Header Files\Containers</Filter>
     </ClInclude>
     <ClInclude Include="ModuleBall.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Audio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
