--- a/Pinball/SDL Game.vcxproj
+++ b/Pinball/SDL Game.vcxproj
@@ -72,6 +72,8 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="ModuleBall.h" />
+    <ClInclude Include="ModuleFonts.h" />
+    <ClInclude Include="ModuleHud.h" />
     <ClInclude Include="ModulePhysics.h" />
     <ClInclude Include="p2List.h" />
     <ClInclude Include="Module.h" />
@@ -91,6 +93,8 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModuleAudio.cpp" />
     <ClCompile Include="ModuleBall.cpp" />
+    <ClCompile Include="ModuleFonts.cpp" />
+    <ClCompile Include="ModuleHud.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModulePhysics.cpp" />
     <ClCompile Include="ModulePlayer.cpp" />
